apps/foundry-vtt-tw/overlays/dev/foundry-vtt-tw_IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: foundry-vtt-tw-ingress
  namespace: foundry-vtt-tw
spec:
  routes:
    - kind: Rule
      match: Host(`dev-gyre.sakagegaming.com`)
      services:
        - kind: Service
          name: foundry-vtt-tw
          passHostHeader: true
          port: 80
  # tls:
  #   certResolver: letsencrypt
